# cassarrow

./: .clang-format  .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  DEVELOPMENT.md  Dockerfile  MANIFEST.in  README.md  WHEELS.md  benchmark.ipynb  build.py  from-source.Dockerfile  migration.cql  not-working.Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  same-toolchain.Dockerfile  setup.py  shell.nix  working.Dockerfile
.github/workflows/: build.yaml  publish.yaml  test.yaml  tests.yml  wheels.yml
cassarrow/: __init__.py  impl.py
cpp/: CMakeLists.txt
cpp/src/: CMakeLists.txt
cpp/src/cassarrow/: bindings.cpp  cassarrow.cpp  cassarrow.h
cpp/tests/: CMakeLists.txt
cpp/tests/cassarrow/: test_cassarrow.cpp
notebooks/: benchmark.ipynb  the-data-thread.ipynb
scripts/: collections.csv  dump_test_data.py  generate_doc.py  integration_test.py  native_types.csv  populate_db.py  wheels.sh
tests/: conftest.py  example_test.py  fixtures.py  generate_doc.py  populate_db.py  test_benchmarks.py  test_compare_with_json.py  test_from_binary.py  test_time_series.py  types.csv
