
[tool.poetry]
name = "cassarrow"
version = "0.0.0"
description = "Apache Arrow adapter for the Cassandra python driver"
authors = ["0x26res <0x26res@gamil.com>"]
maintainers = ["0x26res <0x26res@gmail.com>"]
packages = [
    { include = "cassarrow" }
]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/0x26res/cassarrow"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["apache-arrow", "data"]


[tool.poetry.dependencies]
cassandra-driver = ">=3.0.0"
pyarrow = ">=8.0.0"
python = ">=3.8,<3.11"
pybind11 = ">=2.10.1"
wheel = ">=0.37.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
coverage = ">=6.5.0"
flake8 = ">=5.0.4"
isort = ">=5.10.1"
pre-commit = ">=2.20.0"
pylint = ">=2.15.0"
pytest = ">=7.2.0"
pytest-benchmark = ">=4.0.0"
pandas = ">=1.5.2"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
files = ["*/__init__.py", "build.py"]
folders = [ {path = "cassarrow"}]


[tool.poetry.build]
script = "build.py"

[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.9.0", "pyarrow>=7.0.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
known_first_party = ["_cassarow", "cassarrow"]
skip = [".gitignore"]

[tool.black]
target-version = ['py39']


[mypy]
python_version = 3.9
